# ug-thesis

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh  conanfile.txt  format.sh  init.sh  notes.md  requirements.txt  test.py  test.sh  workflow.org
doc/html/: classBytesParser.html  classBytesParser__coll__graph.map  classClassFileImpl-members.html  classClassFileImpl.html  classClassFileImpl__coll__graph.md5  classClassFileImpl_a3772a57b8eaadf252a9a9f36c063ab93_cgraph.md5  classClassFileImpl_ab84cd50d25d163274a299ba682f57610_cgraph.dot  classClassFileImpl_ab84cd50d25d163274a299ba682f57610_cgraph.map  classClassFileImpl_ab84cd50d25d163274a299ba682f57610_cgraph.md5  classClassReader.html  classClassReader_a001cc48324c31430559b43976d731e8a_cgraph.dot  classClassWriter__coll__graph.dot  classMethod-members.html  classMethod_ac6a47d5797a62c5ffbb39df54ff7171d_cgraph.dot  classMethod_ac6a47d5797a62c5ffbb39df54ff7171d_cgraph.md5  classMethod_af92b40aa1a81df3a6827d688adc005bf_cgraph.dot  classMethod_af92b40aa1a81df3a6827d688adc005bf_cgraph.map  classMethod_afa02f09f3037782d08463433465181b6_cgraph.dot  classProject-members.html  classProject.html  classProject_af5f35c59d1175af1cfa659a597bb6353_cgraph.dot  classProject_af5f35c59d1175af1cfa659a597bb6353_cgraph.md5  classes.html  code_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions_enum.html  functions_func.html  graph_legend.html  index.html  method_8h_source.html  structCONSTANT__Class__info-members.html  structCONSTANT__Class__info.html  structCONSTANT__Class__info__coll__graph.md5  structCONSTANT__GenericMethodref__info__coll__graph.dot  structCONSTANT__NameAndType__info.html  structCONSTANT__NameAndType__info__coll__graph.map  structCode__attribute.html  structCode__attribute_1_1exception__coll__graph.dot  structCode__attribute__coll__graph.map  structDebugOstream.html  (+13 more)
doc/latex/: classClassFileImpl_ab84cd50d25d163274a299ba682f57610_cgraph.dot  classClassFileImpl_ab84cd50d25d163274a299ba682f57610_cgraph.md5  classClassFileImpl_abf8923075c93d6d5bd1755a7b3ced362_cgraph.dot  classClassReader__coll__graph.md5  classClassReader_a001cc48324c31430559b43976d731e8a_cgraph.dot  classClassReader_a001cc48324c31430559b43976d731e8a_cgraph.md5  classMethod.tex  classMethod__coll__graph.md5  classMethod_ac6a47d5797a62c5ffbb39df54ff7171d_cgraph.md5  classMethod_afa02f09f3037782d08463433465181b6_cgraph.dot  classMethod_afa02f09f3037782d08463433465181b6_cgraph.md5  classProject__coll__graph.md5  classProject_af5f35c59d1175af1cfa659a597bb6353_cgraph.dot  classProject_af5f35c59d1175af1cfa659a597bb6353_cgraph.md5  refman.aux  refman.out  (+10 more)
paper/: .gitignore  ETHlogo.ps  Makefile  THANKS.md  abstract.tex  appendix_javap.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap_conclusion.tex  chap_impl.tex  chap_intro.tex  chap_java_technical_details.tex  chap_optimize_for_java.tex  chap_optimize_for_size.tex  classMethod__coll__graph.eps  classProject__coll__graph.eps  cpu_and_gpu_trends.eps  extraformat.tex  extrapackages.tex  introduction.tex  layoutsetup.tex  make.sh  memory_trends.eps  mit_chap1.tex  paper.md  paper.tex  previous_work.tex  refs.bib  rules.tex  theoremsetup.tex  thesis.bbl  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.ps  thesis.tex  thesis.thm  todo.org  (+1 more)
src/: bytesparser.cpp  bytesparser.h  classfile.cpp  classfile.h  classparser.cpp  classparser.h  classreader.cpp  classreader.h  classwriter.cpp  classwriter.h  code.cpp  code.h  main.cpp  method.cpp  method.h  project.cpp  project.h  types.cpp  types.h  util.cpp  util.h
test/: .gitignore  Makefile  clean.py  make.py
(+710 files in other folders)
